--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/frame"
-        android:layout_marginBottom="80dp"/>
+        android:layout_marginBottom="80dp" />
     
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
